gobmkida/c3/second_order_liberty_of_string
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2885:6: error: use of undeclared identifier 'byte_9C689F'
&& ( byte_9C689F[v3] != v4 || ( result = 1, string[239].neighborlist[v3 + 160] != string_number[str])) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2886:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v3] != v4 || ( result = 1, string[239].neighborlist[v3 + 141] != string_number[str])) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2892:6: error: use of undeclared identifier 'byte_9C689F'
&& ( byte_9C689F[v5] != v6 || ( result = 1, string[239].neighborlist[v5 + 160] != string_number[str])) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2893:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v5] != v6 || ( result = 1, string[239].neighborlist[v5 + 141] != string_number[str])) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2899:6: error: use of undeclared identifier 'byte_9C689F'
&& ( byte_9C689F[v7] != v8 || ( result = 1, string[239].neighborlist[v7 + 160] != string_number[str])) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2900:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v7] != v8 || ( result = 1, string[239].neighborlist[v7 + 141] != string_number[str])) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2909:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v9] != v10 || ( result = 1, string[239].neighborlist[v9 + 160] != string_number[str]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/engine/board.c:2911:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[v9] != v10 || ( result = 1, string[239].neighborlist[v9 + 141] != string_number[str]) ) 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/second_order_liberty_of_string/src/obj/1/board.o] Error 1
